--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -11,7 +11,7 @@
     {# end header #}
 
     <div class="page__content">
-      {# content #}
+      {% include "./components/complex/hero/hero.html" %}    
     </div>
 
     {# begin footer #}
