--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,9 @@
       <li>
         <a class="link" href="main.html">Главная</a>
       </li>
+      <li>
+        <a class="link" href="contacts.html">Контакты</a>
+      </li>
     </ul>
 
     <script type="text/javascript">
