--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,15 @@
         <a class="link" href="main.html">Главная</a>
       </li>
       <li>
+        <a class="link" href="about.html">О торговом центре</a>
+      </li>
+      <li>
+        <a class="link" href="news.html">Новости и акции</a>
+      </li>
+      <li>
+        <a class="link" href="shops.html">Магазины</a>
+      </li>
+      <li>
         <a class="link" href="contacts.html">Контакты</a>
       </li>
     </ul>
