--- a/src/pages/shops.html
+++ b/src/pages/shops.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    {% set pageTitle = 'Контакты' %}
+    {% set pageTitle = 'Магазины' %}
     {% include "./components/complex/head/head.html" %}
   </head>
 
   <body class="page">
     {# begin header #}
-    {% set activeMenuItem = 'contacts' %}
+    {% set activeMenuItem = 'shops' %}
     {% include "./components/complex/header/header.html" %}      
     {# end header #}
 
     <div class="page__content">
-      {% set currentitem = 'Как связаться' %}
+      {% set currentitem = 'Наши арендаторы' %}
       {% include "./components/complex/secondary-hero/secondary-hero.html" %}    
     </div>
 
