--- a/src/pages/shops.html
+++ b/src/pages/shops.html
@@ -14,6 +14,7 @@
     <div class="page__content">
       {% set currentitem = 'Наши арендаторы' %}
       {% include "./components/complex/secondary-hero/secondary-hero.html" %}
+      {% include "./components/complex/shops-list/shops-list.html" %}
     </div>
 
     {# begin footer #}
